--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework
 djangorestframework-jsonapi
 django-spinproject
 django-simplestatic
+django-staticfiles
 django-cors-headers
 bcrypt
 uvicorn
