--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework-jsonapi
 django-spinproject
 django-simplestatic
 django-cors-headers
+django-admin-tools
 bcrypt
 uvicorn
 gunicorn
